force-app/main/default/objects/ICF_Parameter__c/fields/Send_ICF_Day__c.field-meta.xml
<CustomField>
    <fullName>Send_ICF_Day__c</fullName>
    <inlineHelpText>Will send survey in ? day(s) after the case is closed. The 0 day means immediately send survey when the case is closed</inlineHelpText>
    <label>Send ICF (day)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>