force-app/main/default/objects/ICF_Parameter__c/fields/Send_ICF_Flag__c.field-meta.xml
<CustomField>
    <fullName>Send_ICF_Flag__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Turn on/off the ICF survey feature</inlineHelpText>
    <label>Send ICF</label>
    <type>Checkbox</type>
</CustomField>