force-app/main/default/objects/ICF_Parameter__c/fields/Send_Thanks_Note_Day__c.field-meta.xml
<CustomField>
    <fullName>Send_Thanks_Note_Day__c</fullName>
    <inlineHelpText>Will send thanks note in ? day(s) after the case is created/closed. The 0 day means immediately send thanks note when the case is created/closed</inlineHelpText>
    <label>Send Case Number (day)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Send_Thanks_Note_When_Case__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>