force-app/main/default/objects/ICF_Parameter__c/fields/Send_Thanks_Note_Flag__c.field-meta.xml
<CustomField>
    <fullName>Send_Thanks_Note_Flag__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Turn on/off the thanks note feature</inlineHelpText>
    <label>Send Case Number</label>
    <type>Checkbox</type>
</CustomField>