force-app/main/default/objects/ICF_Parameter__c/fields/Send_Thanks_Note_When_Case__c.field-meta.xml
<CustomField>
    <fullName>Send_Thanks_Note_When_Case__c</fullName>
    <label>Send Case Number When Case</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
                <default>true</default>
                <label>Created</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>