force-app/main/default/objects/ICF_Parameter__c/fields/Send_to_Case_Contacting__c.field-meta.xml
<CustomField>
    <fullName>Send_to_Case_Contacting__c</fullName>
    <label>Send to Case Contacting</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Customer &amp; Agent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>