force-app/main/default/objects/ICF_Parameter__c/fields/Sender__c.field-meta.xml
<CustomField>
    <fullName>Sender__c</fullName>
    <inlineHelpText>Sender / Masking JATIS</inlineHelpText>
    <label>Sender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AXA_MANDIRI</fullName>
            </value>
            <value>
                <fullName>AXA_FIN_IND</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>