force-app/main/default/objects/ICF_Parameter__c/fields/Status_Cases__c.field-meta.xml
<CustomField>
    <fullName>Status_Cases__c</fullName>
    <label>Status Cases</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>