force-app/main/default/objects/ICF_Parameter__c/fields/Thanks_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Thanks_Email_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Thanks - Email Template</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Email_SMS_Template__c.Method__c</field>
            <operation>equals</operation>
            <value>Email</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Email_SMS_Template__c</referenceTo>
    <relationshipLabel>ICF Parameter (Thanks - Email Template)</relationshipLabel>
    <relationshipName>ICF_Parameter2</relationshipName>
    <type>Lookup</type>
</CustomField>