force-app/main/default/objects/ICF_Parameter__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I Buy</fullName>
            </value>
            <value>
                <fullName>I Renew</fullName>
            </value>
            <value>
                <fullName>I Ask</fullName>
            </value>
            <value>
                <fullName>I Claim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>