force-app/main/default/objects/ICF_Parameter__c/fields/Uploadby__c.field-meta.xml
<CustomField>
    <fullName>Uploadby__c</fullName>
    <inlineHelpText>Upload by JATIS</inlineHelpText>
    <label>Uploadby</label>
    <length>255</length>
    <type>Text</type>
</CustomField>