force-app/main/default/objects/ICF_Parameter__c/fields/Used__c.field-meta.xml
<CustomField>
    <fullName>Used__c</fullName>
    <formula>Id == Master__r.Current_Document__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Used</label>
    <type>Checkbox</type>
</CustomField>