force-app/main/default/objects/ICF_Parameter__c/fields/User_ID__c.field-meta.xml
<CustomField>
    <fullName>User_ID__c</fullName>
    <inlineHelpText>User ID JATIS</inlineHelpText>
    <label>User ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>