force-app/main/default/objects/ICF_Parameter__c/recordTypes/Change_Request_CCC.recordType-meta.xml
<RecordType>
    <fullName>Change_Request_CCC</fullName>
    <active>true</active>
    <label>Change Request - CCC</label>
</RecordType>