force-app/main/default/objects/ICF_Parameter__c/recordTypes/Change_Request_Email_SMS.recordType-meta.xml
<RecordType>
    <fullName>Change_Request_Email_SMS</fullName>
    <active>true</active>
    <label>Change Request - Email &amp; SMS</label>
</RecordType>