force-app/main/default/objects/ICF_Parameter__c/recordTypes/Change_Request_Feedback.recordType-meta.xml
<RecordType>
    <fullName>Change_Request_Feedback</fullName>
    <active>true</active>
    <label>Change Request - Feedback</label>
</RecordType>