force-app/main/default/objects/ICF_Parameter__c/recordTypes/Change_Request_IDAS.recordType-meta.xml
<RecordType>
    <fullName>Change_Request_IDAS</fullName>
    <active>true</active>
    <label>Change Request - IDAS</label>
</RecordType>