force-app/main/default/objects/ICF_Parameter__c/recordTypes/Master_CCC.recordType-meta.xml
<RecordType>
    <fullName>Master_CCC</fullName>
    <active>true</active>
    <label>Master - CCC</label>
</RecordType>