force-app/main/default/objects/ICF_Parameter__c/recordTypes/Master_CMU.recordType-meta.xml
<RecordType>
    <fullName>Master_CMU</fullName>
    <active>true</active>
    <label>Master - CMU</label>
</RecordType>