force-app/main/default/objects/ICF_Parameter__c/recordTypes/Master_Email_SMS.recordType-meta.xml
<RecordType>
    <fullName>Master_Email_SMS</fullName>
    <active>true</active>
    <label>Master - Email &amp; SMS</label>
</RecordType>