force-app/main/default/objects/ICF_Parameter__c/recordTypes/Master_Feedback.recordType-meta.xml
<RecordType>
    <fullName>Master_Feedback</fullName>
    <active>true</active>
    <label>Master - Feedback</label>
</RecordType>