force-app/main/default/objects/ICF_Parameter__c/recordTypes/Master_IDAS.recordType-meta.xml
<RecordType>
    <fullName>Master_IDAS</fullName>
    <active>true</active>
    <label>Master - IDAS</label>
</RecordType>