force-app/main/default/objects/ICF_Parameter__c/recordTypes/Master_Non_CCC.recordType-meta.xml
<RecordType>
    <fullName>Master_Non_CCC</fullName>
    <active>true</active>
    <label>Master - Non CCC</label>
</RecordType>