force-app/main/default/objects/ICF_Parameter__c/recordTypes/Master_Qualtrics.recordType-meta.xml
<RecordType>
    <fullName>Master_Qualtrics</fullName>
    <active>true</active>
    <label>Master - Qualtrics</label>
</RecordType>