force-app/main/default/objects/ICF_Parameter__c/validationRules/Record_Type_must_Same.validationRule-meta.xml
<ValidationRule>
    <fullName>Record_Type_must_Same</fullName>
    <active>true</active>
    <errorConditionFormula>IF ( CONTAINS(RecordType.DeveloperName, &apos;Change Request&apos;), RecordType.DeveloperName ==   SUBSTITUTE(Master__r.RecordType.DeveloperName,&apos;Master&apos;, &apos;Change Request&apos;), FALSE)</errorConditionFormula>
    <errorMessage>Record Type must same with Master Record Type.</errorMessage>
</ValidationRule>