force-app/main/default/objects/ICF_Parameter__c/listViews/All_Change_Request.listView-meta.xml
<ListView>
    <fullName>All_Change_Request</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Status__c</columns>
    <columns>Description__c</columns>
    <columns>Master__c</columns>
    <columns>Current_Document__c</columns>
    <columns>User_Manager__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ICF_Parameter__c.Change_Request_CCC,ICF_Parameter__c.Change_Request_Email_SMS,ICF_Parameter__c.Change_Request_Feedback</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ICF_Parameter__c.Change_Request_Non_CCC,ICF_Parameter__c.Change_Request_IDAS</value>
    </filters>
    <label>All - Change Request</label>
</ListView>