force-app/main/default/objects/ICF_Parameter__c/listViews/All_ICF_Parameter.listView-meta.xml
<ListView>
    <fullName>All_ICF_Parameter</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Entity__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All ICF Parameter</label>
    <language>en_US</language>
</ListView>