force-app/main/default/objects/ICF_Parameter__c/listViews/All_Master.listView-meta.xml
<ListView>
    <fullName>All_Master</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Entity__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Used__c</columns>
    <columns>Master__c</columns>
    <columns>Current_Document__c</columns>
    <columns>Description__c</columns>
    <columns>User_Manager__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All - Master</label>
    <language>en_US</language>
</ListView>